--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "press"
   ],
   "author": "Ben Glynn",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/benglynn/press-demo/issues"
   },
