--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "press-demo",
   "version": "0.0.1",
   "description": "A minimal demonstration of static publishing with Webpack and Press.",
-  "dependencies": {
-    "@benglynn/press": "^1.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@benglynn/press": "^1.1.0",
     "@benglynn/publish": "^1.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "http-server": "^0.12.3",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
