--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@benglynn/publish": "^1.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "http-server": "^0.12.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "css-loader": "^4.2.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
